--- a/fighting.html
+++ b/fighting.html
@@ -100,9 +100,21 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">Shields vs Crews Dezurn 2</a></td>
-<td>February 22, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 22, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
+<td>February 23, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 23, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
+<td>February 24, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 24, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/aew">AEW</a></td>
+<td>February 25, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 25, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
+<td>February 27, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 27, 2026 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
