--- a/mlb.html
+++ b/mlb.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-
 <html data-bs-theme="dark" lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
-<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
-<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-<link href="css/mainn.css" rel="stylesheet" type="text/css"/>
-<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-<style>
-<script>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>
+   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
+  </title>
+  <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+  <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="css/mainn.css" rel="stylesheet" type="text/css"/>
+  <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+  <style>
+   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -61,57 +62,333 @@
         h2 {
             color: pink;
         }
-    </style>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg bg-black">
-<div class="container-fluid">
-<a class="navbar-brand" href="https://roxiestreams.info/">RoxieStreams</a>
-<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
-
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/soccer">Soccer</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/mlb">MLB</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nba">NBA</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nfl">NFL</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nhl">NHL</a></li>
-
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/fighting">Fighting</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/motorsports">Motorsports</a></li>
-<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-</div>
-</div>
-</nav>
-<div class="container container-fluid pt-2 text-white">
-<div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming MLB Events</h2>
-<table id="eventsTable">
-<thead>
-<tr>
-<th>Event</th>
-<th>Start Time</th>
-<th>Countdown</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-</tr></tbody></table>
-</div>
-</div>
-<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
-</footer>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script>
-        function startCountdown() {
+  </style>
+ </head>
+ <body>
+  <nav class="navbar navbar-expand-lg bg-black">
+   <div class="container-fluid">
+    <a class="navbar-brand" href="https://roxiestreams.info/">
+     RoxieStreams
+    </a>
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+     <span class="navbar-toggler-icon">
+     </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">
+        Winter Olympics
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.info/soccer">
+        Soccer
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.info/mlb">
+        MLB
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.info/nba">
+        NBA
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.info/nfl">
+        NFL
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.info/nhl">
+        NHL
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.info/fighting">
+        Fighting
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.info/motorsports">
+        Motorsports
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
+       </a>
+      </li>
+     </ul>
+    </div>
+   </div>
+  </nav>
+  <div class="container container-fluid pt-2 text-white">
+   <div class="mt-5">
+    <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
+     Upcoming MLB Events
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-1">
+         Baltimore Orioles vs Detroit Tigers
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:05 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:05:00" data-start="February 22, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-2">
+         St. Louis Cardinals vs Houston Astros
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:05 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:05:00" data-start="February 22, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-3">
+         Tampa Bay Rays vs Pittsburgh Pirates
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:05 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:05:00" data-start="February 22, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-4">
+         Toronto Blue Jays vs Boston Red Sox
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:05 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:05:00" data-start="February 22, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-5">
+         Pittsburgh Pirates vs Philadelphia Phillies
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:05 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:05:00" data-start="February 22, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-6">
+         Minnesota Twins vs Atlanta Braves
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:05 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:05:00" data-start="February 22, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-7">
+         New York Mets vs New York Yankees
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:05 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:05:00" data-start="February 22, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-8">
+         Washington Nationals vs Miami Marlins
+        </a>
+       </td>
+       <td>
+        February 22, 2026 10:10 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 22:10:00" data-start="February 22, 2026 10:10:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-9">
+         Cleveland Guardians vs Athletics
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:05:00" data-start="February 22, 2026 12:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-10">
+         Seattle Mariners vs Cincinnati Reds
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:05:00" data-start="February 22, 2026 12:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-11">
+         Chicago Cubs vs San Francisco Giants
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:05:00" data-start="February 22, 2026 12:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-12">
+         Colorado Rockies vs Texas Rangers
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:05:00" data-start="February 22, 2026 12:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-13">
+         Milwaukee Brewers vs Chicago White Sox
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:05:00" data-start="February 22, 2026 12:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-14">
+         Los Angeles Angels vs Arizona Diamondbacks
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:10 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:10:00" data-start="February 22, 2026 12:10:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-15">
+         Los Angeles Dodgers vs San Diego Padres
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:10 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:10:00" data-start="February 22, 2026 12:10:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.cc/mlb-streams-16">
+         Kansas City Royals vs Milwaukee Brewers
+        </a>
+       </td>
+       <td>
+        February 22, 2026 12:10 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 23, 2026 00:10:00" data-start="February 22, 2026 12:10:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+  </div>
+  <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+   <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+    <li class="nav-item">
+     <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+      Stream Request (Discord)
+     </a>
+    </li>
+   </ul>
+   <p class="mb-0 text-body-secondary text-center text-lg-start">
+    Roxiestreams © 2024
+   </p>
+  </footer>
+  <script src="js/bootstrap.bundle.min.js">
+  </script>
+  <script>
+   function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -140,6 +417,6 @@
         }
 
         window.onload = startCountdown;
-    </script>
-</body>
+  </script>
+ </body>
 </html>
