--- a/nba.html
+++ b/nba.html
@@ -148,154 +148,42 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         Cleveland Cavaliers vs Oklahoma City Thunder
+         San Antonio Spurs vs Detroit Pistons
         </a>
        </td>
        <td>
-        February 22, 2026 10:00 AM
+        February 23, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 23, 2026 10:00 AM:00" data-start="February 22, 2026 10:00 AM:00">
+        <span class="countdown-timer" data-end="February 24, 2026 4:00 PM:00" data-start="February 23, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         Brooklyn Nets vs Atlanta Hawks
+         Sacramento Kings vs Memphis Grizzlies
         </a>
        </td>
        <td>
-        February 22, 2026 12:30 PM
+        February 23, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 23, 2026 12:30 PM:00" data-start="February 22, 2026 12:30 PM:00">
+        <span class="countdown-timer" data-end="February 24, 2026 5:00 PM:00" data-start="February 23, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         Toronto Raptors vs Milwaukee Bucks
+         Utah Jazz vs Houston Rockets
         </a>
        </td>
        <td>
-        February 22, 2026 12:30 PM
+        February 23, 2026 6:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 23, 2026 12:30 PM:00" data-start="February 22, 2026 12:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-4">
-         Denver Nuggets vs Golden State Warriors
-        </a>
-       </td>
-       <td>
-        February 22, 2026 12:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 12:30 PM:00" data-start="February 22, 2026 12:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-5">
-         Dallas Mavericks vs Indiana Pacers
-        </a>
-       </td>
-       <td>
-        February 22, 2026 2:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 2:00 PM:00" data-start="February 22, 2026 2:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-6">
-         Charlotte Hornets vs Washington Wizards
-        </a>
-       </td>
-       <td>
-        February 22, 2026 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 3:00 PM:00" data-start="February 22, 2026 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-7">
-         Boston Celtics vs Los Angeles Lakers
-        </a>
-       </td>
-       <td>
-        February 22, 2026 3:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 3:30 PM:00" data-start="February 22, 2026 3:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-8">
-         Philadelphia 76ers vs Minnesota Timberwolves
-        </a>
-       </td>
-       <td>
-        February 22, 2026 4:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 4:00 PM:00" data-start="February 22, 2026 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-9">
-         New York Knicks vs Chicago Bulls
-        </a>
-       </td>
-       <td>
-        February 22, 2026 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 5:00 PM:00" data-start="February 22, 2026 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-10">
-         Portland Trail Blazers vs Phoenix Suns
-        </a>
-       </td>
-       <td>
-        February 22, 2026 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 5:00 PM:00" data-start="February 22, 2026 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-11">
-         Orlando Magic vs Los Angeles Clippers
-        </a>
-       </td>
-       <td>
-        February 22, 2026 6:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 23, 2026 6:00 PM:00" data-start="February 22, 2026 6:00 PM:00">
+        <span class="countdown-timer" data-end="February 24, 2026 6:30 PM:00" data-start="February 23, 2026 6:30 PM:00">
         </span>
        </td>
       </tr>
