--- a/soccer.html
+++ b/soccer.html
@@ -99,139 +99,24 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Genoa vs Torino</a></td>
-<td>February 22, 2026 3:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Fiorentina vs Pisa</a></td>
+<td>February 22, 2026 9:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 23, 2026 03:30:00 AM" data-start="February 22, 2026 03:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Sheffield United vs Sheffield Wednesday</a></td>
-<td>February 22, 2026 4:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Bologna vs Udinese</a></td>
+<td>February 22, 2026 11:45 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 23, 2026 04:00:00 AM" data-start="February 22, 2026 04:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Getafe vs Sevilla</a></td>
-<td>February 22, 2026 5:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Everton vs Manchester United</a></td>
+<td>February 22, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 23, 2026 05:00:00 AM" data-start="February 22, 2026 05:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Crystal Palace vs Wolves</a></td>
-<td>February 22, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Nottingham Forest vs Liverpool</a></td>
-<td>February 22, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Sunderland vs Fulham</a></td>
-<td>February 22, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Auxerre vs Rennes</a></td>
-<td>February 22, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Atalanta vs Napoli</a></td>
-<td>February 22, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Freiburg vs M'gladbach</a></td>
-<td>February 22, 2026 6:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:30:00 AM" data-start="February 22, 2026 06:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Livingston vs Rangers</a></td>
-<td>February 22, 2026 7:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 07:00:00 AM" data-start="February 22, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Barcelona vs Levante</a></td>
-<td>February 22, 2026 7:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 07:15:00 AM" data-start="February 22, 2026 07:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Angers SCO vs Lille</a></td>
-<td>February 22, 2026 8:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 08:15:00 AM" data-start="February 22, 2026 08:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Nice vs Lorient</a></td>
-<td>February 22, 2026 8:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 08:15:00 AM" data-start="February 22, 2026 08:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Tottenham Hotspur vs Arsenal</a></td>
-<td>February 22, 2026 8:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 08:30:00 AM" data-start="February 22, 2026 08:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">St. Pauli vs Werder Bremen</a></td>
-<td>February 22, 2026 8:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 08:30:00 AM" data-start="February 22, 2026 08:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Milan vs Parma</a></td>
-<td>February 22, 2026 9:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 09:00:00 AM" data-start="February 22, 2026 09:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Celta De Vigo vs Mallorca</a></td>
-<td>February 22, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 09:30:00 AM" data-start="February 22, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Heidenheim vs Stuttgart</a></td>
-<td>February 22, 2026 10:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 10:30:00 AM" data-start="February 22, 2026 10:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Strasbourg vs Lyon</a></td>
-<td>February 22, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 11:45:00 AM" data-start="February 22, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Roma vs Cremonese</a></td>
-<td>February 22, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 11:45:00 AM" data-start="February 22, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Villarreal vs Valencia</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Deportivo Alavés vs Girona</a></td>
 <td>February 22, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 12:00:00 PM" data-start="February 22, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Vasco Da Gama vs Fluminense</a></td>
-<td>February 22, 2026 1:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 01:00:00 PM" data-start="February 22, 2026 01:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Vélez Sarsfield vs River Plate</a></td>
-<td>February 22, 2026 2:15 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 02:15:00 PM" data-start="February 22, 2026 02:15:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Pumas UNAM vs Monterrey</a></td>
-<td>February 22, 2026 3:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 03:00:00 PM" data-start="February 22, 2026 03:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Flamengo vs Madureira</a></td>
-<td>February 22, 2026 3:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 03:30:00 PM" data-start="February 22, 2026 03:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-15">Querétaro vs Juarez</a></td>
-<td>February 22, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 05:00:00 PM" data-start="February 22, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">Seattle Sounders FC vs Colorado Rapids</a></td>
-<td>February 22, 2026 5:15 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 05:15:00 PM" data-start="February 22, 2026 05:15:00 PM" span=""></span></td>
+<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
