--- a/mlb-streams-5.html
+++ b/mlb-streams-5.html
@@ -103,7 +103,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://chained.ncvtmisgov.com/mlb5.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/mlb.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -138,7 +138,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://chained.ncvtmisgov.com/mlb5.m3u8');
+            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/mlb.m3u8');
         };
     </script>
     <script>
@@ -154,11 +154,10 @@
         });
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
-
-
 <script type="text/javascript">
-aclib.runPop({
-zoneId: '10754426',
-});
-</script></body>
+    aclib.runPop({
+        zoneId: '10754426',
+    });
+</script>
+</body>
 </html>
