--- a/soccer.html
+++ b/soccer.html
@@ -100,23 +100,23 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-1">Fiorentina vs Pisa</a></td>
-<td>February 22, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 03:30:00 AM" data-start="February 22, 2026 03:30:00 AM" span=""></span></td>
+<td>February 23, 2026 9:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 24, 2026 09:30:00 AM" data-start="February 23, 2026 09:30:00 AM" span=""></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-2">Bologna vs Udinese</a></td>
-<td>February 22, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 04:00:00 AM" data-start="February 22, 2026 04:00:00 AM" span=""></span></td>
+<td>February 23, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 24, 2026 11:45:00 AM" data-start="February 23, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-3">Everton vs Manchester United</a></td>
-<td>February 22, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 05:00:00 AM" data-start="February 22, 2026 05:00:00 AM" span=""></span></td>
+<td>February 23, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 24, 2026 12:00:00 PM" data-start="February 23, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-4">Deportivo Alavés vs Girona</a></td>
-<td>February 22, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM" span=""></span></td>
+<td>February 23, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 24, 2026 12:00:00 PM" data-start="February 23, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
