--- a/mlb.html
+++ b/mlb.html
@@ -147,7 +147,7 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/mlb-streams-1">
+        <a href="https://roxiestreams.info/mlb-streams-1">
          Miami Marlins vs St. Louis Cardinals
         </a>
        </td>
@@ -161,7 +161,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/mlb-streams-2">
+        <a href="https://roxiestreams.info/mlb-streams-2">
          New York Yankees vs Pittsburgh Pirates
         </a>
        </td>
@@ -175,7 +175,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/mlb-streams-3">
+        <a href="https://roxiestreams.info/mlb-streams-3">
          New York Mets vs Toronto Blue Jays
         </a>
        </td>
@@ -189,7 +189,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/mlb-streams-4">
+        <a href="https://roxiestreams.info/mlb-streams-4">
          Seattle Mariners vs Los Angeles Dodgers
         </a>
        </td>
@@ -203,7 +203,7 @@
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/mlb-streams-5">
+        <a href="https://roxiestreams.info/mlb-streams-5">
          Milwaukee Brewers vs San Diego Padres
         </a>
        </td>
