--- a/soccer-streams-3.html
+++ b/soccer-streams-3.html
@@ -102,7 +102,7 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', '601'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('usa.m3u8', '601'))">Stream 2</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('usa.m3u8', 'daffodil'))">Stream 2</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('mainalt.m3u8', '601'))">Stream 3</button>
 	</div>
             <div class="embedchat">
